# bookskill-studio

./: .gitignore  CHANGELOG.md  GITHUB_METADATA.md  LICENSE  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
bookskill_studio/: __main__.py  cli.py  compiler.py  doctor.py  extractor.py  i18n.py  installer.py  validator.py
examples/: demo-book.md
scripts/: demo.tape  generate-demo-gif.sh
tests/: test_cli.py
